# blackbird

./: .env.development  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/endpoints/: predict.py
backend/app/ml/: predictor.py
backend/app/models/: schemas.py
backend/models/: quick_pattern_model_20241026_154325.joblib  quick_pattern_model_20241026_173343.joblib  quick_pattern_model_20241026_193335.joblib  quick_pattern_model_20241026_202313.joblib  quick_pattern_model_20241026_213023.joblib  quick_pattern_model_20241027_023219.joblib  quick_pattern_model_20241027_115638.joblib  quick_pattern_model_20241027_125148.joblib  quick_pattern_model_20241027_135541.joblib  quick_pattern_model_20241027_153751.joblib  quick_pattern_model_20241027_172018.joblib  quick_pattern_model_20241027_173636.joblib  quick_pattern_model_20241027_191326.joblib  quick_pattern_model_20241027_193008.joblib  quick_pattern_model_20241027_203444.joblib  quick_pattern_model_20241027_213951.joblib  quick_pattern_model_20241028_052745.joblib  quick_pattern_model_20241028_231834.joblib  quick_pattern_model_20241029_201959.joblib  quick_pattern_model_20241029_211911.joblib
frontend/: next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx
payment/: go.mod
src/app/: layout.tsx  page.tsx
src/components/: TokenScanner.tsx  columns.tsx  token-scanner.tsx  virtual-table.tsx
src/hooks/: useWebSocket.tsx
src/lib/: solana.ts  types.ts
(+22 files in other folders)
